# ChangeLog for net-irc/irssi
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi/ChangeLog,v 1.120 2007/08/26 20:45:44 swegener Exp $

*irssi-0.8.12_rc1 (26 Aug 2007)

  26 Aug 2007; Sven Wegener <swegener@gentoo.org> +irssi-0.8.12_rc1.ebuild:
  Version bump.

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> irssi-0.8.11.ebuild:
  ppc. stable

  13 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> irssi-0.8.11.ebuild:
  Stable on sparc

  03 Jun 2007; Christoph Mende <angelos@gentoo.org> irssi-0.8.11.ebuild:
  Stable on amd64 wrt bug 180767

  01 Jun 2007; Joshua Kinard <kumba@gentoo.org> irssi-0.8.11.ebuild:
  Stable on mips.

  26 May 2007; Raúl Porcel <armin76@gentoo.org> irssi-0.8.11.ebuild:
  alpha/ia64/x86 stable

  28 Apr 2007; Sven Wegener <swegener@gentoo.org> -irssi-0.8.11_rc1.ebuild,
  -irssi-0.8.11_rc2.ebuild, irssi-0.8.11.ebuild:
  Drop MY_P from 0.8.11. Cleanup _rc ebuilds.

*irssi-0.8.11 (25 Apr 2007)

  25 Apr 2007; Sven Wegener <swegener@gentoo.org> +irssi-0.8.11.ebuild:
  Version bump.

*irssi-0.8.11_rc2 (20 Apr 2007)

  20 Apr 2007; Sven Wegener <swegener@gentoo.org> +irssi-0.8.11_rc2.ebuild:
  Version bump.

  17 Mar 2007; Sven Wegener <swegener@gentoo.org> -irssi-0.8.10-r3.ebuild:
  Cleanup.

  17 Mar 2007; Steve Dibb <beandog@gentoo.org> irssi-0.8.10-r4.ebuild:
  amd64 stable, bug 169090

  06 Mar 2007; Markus Rothe <corsair@gentoo.org> irssi-0.8.10-r4.ebuild:
  Stable on ppc64; bug #169090

  03 Mar 2007; Andrej Kacian <ticho@gentoo.org> irssi-0.8.10-r4.ebuild:
  Stable on x86, bug #169090.

*irssi-0.8.11_rc1 (22 Feb 2007)

  22 Feb 2007; Sven Wegener <swegener@gentoo.org> irssi-0.8.10-r3.ebuild,
  irssi-0.8.10-r4.ebuild, +irssi-0.8.11_rc1.ebuild:
  Version bump, bug #167820.

  17 Jan 2007; Fabian Groffen <grobian@gentoo.org> irssi-0.8.10-r3.ebuild,
  irssi-0.8.10-r4.ebuild:
  Dropped ppc-macos keyword, see you in prefix
